@@ -7,3 +7,8 @@ TODO
 
 - implement render methods for each batch status, e.g. renderFirstBatch,
   renderLastBatch.
+
+- push the current sorted status to the Column objects/class
+  it's just mad that we try to figure this at several places
+  (SortingColumnHeader, Table.getCSSSortClass)
+  possibly with different results ;-)
