@@ -38,8 +38,8 @@ Now let's set up a table:
 
 Create a container:
 
-  >>> from z3c.table.testing import Container
-  >>> container = Container()
+  >>> from z3c.table.testing import OrderedContainer
+  >>> container = OrderedContainer()
 
 We also need some container items that we can use for sorting:
 
@@ -60,6 +60,47 @@ And render them without set a ``sortOn`` value:
   <table>
     <thead>
       <tr>
+        <th class="sorted-on ascending">Title</th>
+        <th>Number</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="sorted-on ascending">Title: First</td>
+        <td>number: 1</td>
+      </tr>
+      <tr>
+        <td class="sorted-on ascending">Title: Fourth</td>
+        <td>number: 4</td>
+      </tr>
+      <tr>
+        <td class="sorted-on ascending">Title: Second</td>
+        <td>number: 2</td>
+      </tr>
+      <tr>
+        <td class="sorted-on ascending">Title: Third</td>
+        <td>number: 3</td>
+      </tr>
+      <tr>
+        <td class="sorted-on ascending">Title: Zero</td>
+        <td>number: 0</td>
+      </tr>
+    </tbody>
+  </table>
+
+Ooops, well, by default the table is sorted on the first column, ascending.
+
+  >>> sortingTable.sortOn
+  0
+
+Now switch off sorting, now we get the original order:
+
+  >>> sortingTable.sortOn = None
+  >>> sortingTable.update()
+  >>> print sortingTable.render()
+  <table>
+    <thead>
+      <tr>
         <th>Title</th>
         <th>Number</th>
       </tr>
@@ -70,10 +111,6 @@ And render them without set a ``sortOn`` value:
         <td>number: 1</td>
       </tr>
       <tr>
-        <td>Title: Fourth</td>
-        <td>number: 4</td>
-      </tr>
-      <tr>
         <td>Title: Second</td>
         <td>number: 2</td>
       </tr>
@@ -82,11 +119,16 @@ And render them without set a ``sortOn`` value:
         <td>number: 3</td>
       </tr>
       <tr>
+        <td>Title: Fourth</td>
+        <td>number: 4</td>
+      </tr>
+      <tr>
         <td>Title: Zero</td>
         <td>number: 0</td>
       </tr>
     </tbody>
   </table>
+
 
 As you can see this table doesn't provide any explicit order. Let's find out
 the index of our column that we like to sort on:
@@ -107,29 +149,29 @@ An important thing is to update the table after set an ``sortOn`` value:
     <thead>
       <tr>
         <th>Title</th>
-        <th>Number</th>
+        <th class="sorted-on ascending">Number</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>Title: Zero</td>
-        <td>number: 0</td>
+        <td class="sorted-on ascending">number: 0</td>
       </tr>
       <tr>
         <td>Title: First</td>
-        <td>number: 1</td>
+        <td class="sorted-on ascending">number: 1</td>
       </tr>
       <tr>
         <td>Title: Second</td>
-        <td>number: 2</td>
+        <td class="sorted-on ascending">number: 2</td>
       </tr>
       <tr>
         <td>Title: Third</td>
-        <td>number: 3</td>
+        <td class="sorted-on ascending">number: 3</td>
       </tr>
       <tr>
         <td>Title: Fourth</td>
-        <td>number: 4</td>
+        <td class="sorted-on ascending">number: 4</td>
       </tr>
     </tbody>
   </table>
@@ -143,29 +185,29 @@ We can also reverse the sorting order:
     <thead>
       <tr>
         <th>Title</th>
-        <th>Number</th>
+        <th class="sorted-on reverse">Number</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>Title: Fourth</td>
-        <td>number: 4</td>
+        <td class="sorted-on reverse">number: 4</td>
       </tr>
       <tr>
         <td>Title: Third</td>
-        <td>number: 3</td>
+        <td class="sorted-on reverse">number: 3</td>
       </tr>
       <tr>
         <td>Title: Second</td>
-        <td>number: 2</td>
+        <td class="sorted-on reverse">number: 2</td>
       </tr>
       <tr>
         <td>Title: First</td>
-        <td>number: 1</td>
+        <td class="sorted-on reverse">number: 1</td>
       </tr>
       <tr>
         <td>Title: Zero</td>
-        <td>number: 0</td>
+        <td class="sorted-on reverse">number: 0</td>
       </tr>
     </tbody>
   </table>
@@ -186,29 +228,154 @@ by the second column and ordered in reverse order:
     <thead>
       <tr>
         <th>Title</th>
-        <th>Number</th>
+        <th class="sorted-on descending">Number</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>Title: Fourth</td>
-        <td>number: 4</td>
+        <td class="sorted-on descending">number: 4</td>
       </tr>
       <tr>
         <td>Title: Third</td>
-        <td>number: 3</td>
+        <td class="sorted-on descending">number: 3</td>
       </tr>
       <tr>
         <td>Title: Second</td>
-        <td>number: 2</td>
+        <td class="sorted-on descending">number: 2</td>
       </tr>
       <tr>
         <td>Title: First</td>
-        <td>number: 1</td>
+        <td class="sorted-on descending">number: 1</td>
       </tr>
       <tr>
         <td>Title: Zero</td>
+        <td class="sorted-on descending">number: 0</td>
+      </tr>
+    </tbody>
+  </table>
+
+There's a header renderer, which provides a handy link rendering for sorting:
+
+  >>> import zope.component
+  >>> from z3c.table import interfaces
+  >>> from z3c.table.header import SortingColumnHeader
+  >>> zope.component.provideAdapter(SortingColumnHeader,
+  ...     (None, None, interfaces.ITable, interfaces.IColumn),
+  ...     provides=interfaces.IColumnHeader)
+
+Let's see now various sortings:
+
+  >>> request = TestRequest()
+  >>> sortingTable = SortingTable(container, request)
+  >>> sortingTable.update()
+  >>> sortingTable.sortOn
+  0
+  >>> sortingTable.sortOrder
+  u'ascending'
+  >>> print sortingTable.render()
+  <table>
+    <thead>
+      <tr>
+        <th class="sorted-on ascending"><a href="?table-sortOrder=descending&table-sortOn=table-title-0" title="Sort">Title</a></th>
+        <th><a href="?table-sortOrder=ascending&table-sortOn=table-number-1" title="Sort">Number</a></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="sorted-on ascending">Title: First</td>
+        <td>number: 1</td>
+      </tr>
+      <tr>
+        <td class="sorted-on ascending">Title: Fourth</td>
+        <td>number: 4</td>
+      </tr>
+      <tr>
+        <td class="sorted-on ascending">Title: Second</td>
+        <td>number: 2</td>
+      </tr>
+      <tr>
+        <td class="sorted-on ascending">Title: Third</td>
+        <td>number: 3</td>
+      </tr>
+      <tr>
+        <td class="sorted-on ascending">Title: Zero</td>
         <td>number: 0</td>
+      </tr>
+    </tbody>
+  </table>
+
+Let's see the `number` column:
+
+  >>> sortingTable.sortOn = u'table-number-1'
+
+  >>> sortingTable.update()
+  >>> print sortingTable.render()
+  <table>
+    <thead>
+      <tr>
+        <th><a href="?table-sortOrder=ascending&table-sortOn=table-title-0" title="Sort">Title</a></th>
+        <th class="sorted-on ascending"><a href="?table-sortOrder=descending&table-sortOn=table-number-1" title="Sort">Number</a></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Title: Zero</td>
+        <td class="sorted-on ascending">number: 0</td>
+      </tr>
+      <tr>
+        <td>Title: First</td>
+        <td class="sorted-on ascending">number: 1</td>
+      </tr>
+      <tr>
+        <td>Title: Second</td>
+        <td class="sorted-on ascending">number: 2</td>
+      </tr>
+      <tr>
+        <td>Title: Third</td>
+        <td class="sorted-on ascending">number: 3</td>
+      </tr>
+      <tr>
+        <td>Title: Fourth</td>
+        <td class="sorted-on ascending">number: 4</td>
+      </tr>
+    </tbody>
+  </table>
+
+Let's see the `title` column but descending:
+
+  >>> sortingTable.sortOn = u'table-title-0'
+  >>> sortingTable.sortOrder = 'descending'
+
+  >>> sortingTable.update()
+  >>> print sortingTable.render()
+  <table>
+    <thead>
+      <tr>
+        <th class="sorted-on descending"><a href="?table-sortOrder=ascending&table-sortOn=table-title-0" title="Sort">Title</a></th>
+        <th><a href="?table-sortOrder=descending&table-sortOn=table-number-1" title="Sort">Number</a></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="sorted-on descending">Title: Zero</td>
+        <td>number: 0</td>
+      </tr>
+      <tr>
+        <td class="sorted-on descending">Title: Third</td>
+        <td>number: 3</td>
+      </tr>
+      <tr>
+        <td class="sorted-on descending">Title: Second</td>
+        <td>number: 2</td>
+      </tr>
+      <tr>
+        <td class="sorted-on descending">Title: Fourth</td>
+        <td>number: 4</td>
+      </tr>
+      <tr>
+        <td class="sorted-on descending">Title: First</td>
+        <td>number: 1</td>
       </tr>
     </tbody>
   </table>
