@@ -68,6 +68,8 @@ class Table(zope.location.Location):
     cssClassEven = u''
     cssClassOdd = u''
     cssClassSelected = u''
+    # css to show sorting, set to None to turn off
+    cssClassSortedOn = 'sorted-on'
 
     # sort attributes
     sortOn = 0
@@ -99,19 +101,43 @@ class Table(zope.location.Location):
         # order columns
         self.orderColumns()
 
+    @property
+    def values(self):
+        adapter = zope.component.getMultiAdapter(
+            (self.context, self.request, self), interfaces.IValues)
+        return adapter.values
+
+# CSS helpers
+
+    def getCSSHighlightClass(self, column, item, cssClass):
+        """Provide a highlight option for any cell"""
+        return cssClass
+
+    def getCSSSortClass(self, column, cssClass):
+        """Add CSS class based on current sorting"""
+        if self.cssClassSortedOn and self.sortOn is not None:
+            try:
+                currentSortID = int(self.sortOn)
+            except ValueError:
+                currentSortID = self.sortOn.rsplit('-', 1)[-1]
+            sortID = column.id.rsplit('-', 1)[-1]
+
+            if int(sortID) == int(currentSortID):
+                klass = self.cssClassSortedOn + ' ' + self.sortOrder
+                if cssClass:
+                    cssClass += ' ' + klass
+                else:
+                    cssClass = klass
+        return cssClass
+
     def getCSSClass(self, element, cssClass=None):
+        """Add CSS class based on HTML tag, make a `class=` attribute"""
         klass = self.cssClasses.get(element)
         if klass and cssClass:
             klass = '%s %s' % (cssClass, klass)
         elif cssClass:
             klass = cssClass
         return klass and ' class=%s' % quoteattr(klass) or ''
-
-    @property
-    def values(self):
-        adapter = zope.component.getMultiAdapter(
-            (self.context, self.request, self), interfaces.IValues)
-        return adapter.values
 
 # setup
 
@@ -147,11 +173,11 @@ class Table(zope.location.Location):
                 colspan = colspanCounter = col.getColspan(item)
                 # adjust colspan because we define 0, 2, 3, etc.
                 if colspanCounter > 0:
-                    colspanCounter -=1
+                    colspanCounter -= 1
 
             if colspan == 0 and colspanCounter > 0:
                 # override col if colspan is 0 and colspan coutner not 0
-                colspanCounter -=1
+                colspanCounter -= 1
                 colspan = 0
                 # now we are ready to setup dummy colspan cells
                 col = column.NoneCell(self.context, self.request, self)
@@ -171,11 +197,11 @@ class Table(zope.location.Location):
 
     def getSortOn(self):
         """Returns sort on column id."""
-        return self.request.get(self.prefix +'-sortOn', self.sortOn)
+        return self.request.get(self.prefix + '-sortOn', self.sortOn)
 
     def getSortOrder(self):
         """Returns sort order criteria."""
-        return self.request.get(self.prefix +'-sortOrder',
+        return self.request.get(self.prefix + '-sortOrder',
             self.sortOrder)
 
     def sortRows(self):
@@ -190,11 +216,11 @@ class Table(zope.location.Location):
 # batch
 
     def getBatchSize(self):
-        return int(self.request.get(self.prefix +'-batchSize',
+        return int(self.request.get(self.prefix + '-batchSize',
             self.batchSize))
 
     def getBatchStart(self):
-        return int(self.request.get(self.prefix +'-batchStart',
+        return int(self.request.get(self.prefix + '-batchStart',
             self.batchStart))
 
     def batchRows(self):
@@ -242,6 +268,7 @@ class Table(zope.location.Location):
 
     def renderHeadCell(self, column):
         cssClass = column.cssClasses.get('th')
+        cssClass = self.getCSSSortClass(column, cssClass)
         cssClass = self.getCSSClass('th', cssClass)
         return u'\n      <th%s>%s</th>' % (cssClass, column.renderHeadCell())
 
@@ -275,6 +302,8 @@ class Table(zope.location.Location):
         if interfaces.INoneCell.providedBy(column):
             return u''
         cssClass = column.cssClasses.get('td')
+        cssClass = self.getCSSHighlightClass(column, item, cssClass)
+        cssClass = self.getCSSSortClass(column, cssClass)
         cssClass = self.getCSSClass('td', cssClass)
         colspanStr = colspan and ' colspan="%s"' % colspan or ''
         return u'\n      <td%s%s>%s</td>' % (cssClass, colspanStr,
