@@ -5,7 +5,9 @@ CHANGES
 0.9.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added sorting (``cssClassSortedOn`` and ``getCSSSortClass``) CSS options
+
+- Added cell highlight (``getCSSHighlightClass``) CSS option
 
 
 0.9.1 (2011-08-03)
